--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,18 +10,18 @@ source:
 
 requirements:
   build:
-    - python 3.11
+    - python
     - setuptools >=64
     - setuptools_scm >=8
 
   host:
-    - python 3.11
+    - python
     - numpy >=1.22.4
     - cython >=0.26.1
     - pip
 
   run:
-    - python >=3.10
+    - python
     - numpy >=1.22.4
     - scipy >=0.19.1
     - numexpr >=2.6.1
