--- a/.github/workflows/typing.yml
+++ b/.github/workflows/typing.yml
@@ -28,4 +28,5 @@ jobs:
     - name: Run mypy
       run: |
         python -m pip install -r requirements_typing.txt
+        python -m pip install -e --no-deps .
         mypy --strict progressivis/ tests/
