--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 package:
   name: progressivis
-  version: {{ environ.get('GIT_DESCRIBE_TAG', '')}}
+  version: {{ environ.get('GIT_DESCRIBE_TAG', '')[1:]}}
 
 build:
   number: {{ environ.get('GIT_DESCRIBE_NUMBER', 0) }}
