--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "Pillow>=4.2.0",
-    "numpy>=1.22.4<2",
+    "numpy<2",
     "scipy>=0.18.1",
     "numexpr>=2.6.1,<2.8.5",
     "pandas>=1.2.5",
