type checking fixes

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
         exclude: ^progressivis/datashape/
         args: [--strict, --explicit-package-bases]
         additional_dependencies:
-          - 'numpy'
+          - 'numpy<2'
           - 'ipython'
           - 'jinja2'
           - 'sqlalchemy-stubs'
