--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy<2.0.0", "cython", "pybind11>=2.0.1"]
+requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy", "cython", "pybind11>=2.12"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -20,7 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "Pillow>=4.2.0",
-    "numpy<2.0.0",
+    "numpy",
     "scipy>=0.18.1",
     "numexpr>=2.6.1",
     "pandas>=1.2.5",
