--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       # Run the linter.
       - id: ruff
         exclude: notebooks
+        exclude: doc
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.12.0
