Fix action file syntax

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,7 +45,7 @@ jobs:
       run: |
         coverage report html
 
-    - Upload coverage
+    - name: Upload coverage
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report-${{ matrix.python }}
