--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,30 @@
 [build-system]
-requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "numpy", "cython", "pybind11>=2.12"]
-build-backend = "setuptools.build_meta"
+requires = [
+    "hatchling>=1.18",
+    "hatch-vcs",
+    "wheel",
+    "cython",
+]
+build-backend = "hatchling.build"
 
 [project]
 name = "progressivis"
+dynamic = ["version"]
 description = "A Progressive Steerable Analytics Toolkit"
 readme = "README.md"
-license = { file = "LICENSE" }
+license = "BSD-2-Clause"
+license-files = ["LICENSE"]
 requires-python = ">=3.10"
 authors = [
     { name = "INRIA, Jean-Daniel Fekete, Christian Poli", email = "jean-daniel.fekete@inria.fr" },
 ]
 keywords = ["Progressive analytics visualization"]
+
 classifiers = [
-     "Development Status :: 2 - PRe-Alpha",
      "Topic :: Scientific/Engineering :: Visualization",
      "Topic :: Scientific/Engineering :: Information Analysis",
-     "License :: OSI Approved :: BSD License",
 ]
+
 dependencies = [
     "Pillow>=4.2.0",
     "numpy",
@@ -41,13 +48,56 @@ dependencies = [
     "python-dateutil",  # datashape
     "click",
 ]
-# Important: Remove any existing version declaration
-# version = "0.0.1"
-dynamic = ["version"]
-# more missing
 
-[tool.setuptools_scm]
-version_file = "progressivis/_version.py"
+
+# Important: Remove any existing version declaration
+
+[project.urls]
+Homepage = "https://github.com/progressivis/progressivis"
+
+[tool.hatch.build]
+artifacts = [
+]
+
+[tool.setuptools]
+packages = [
+    "progressivis",
+    "progressivis.utils",
+    "progressivis.core",
+    "progressivis.storage",
+    "progressivis.io",
+    "progressivis.stats",
+    "progressivis.datasets",
+    "progressivis.datashape",
+    "progressivis.datashape.util",
+    "progressivis.vis",
+    "progressivis.cluster",
+    "progressivis.server",
+    "progressivis.table",
+]
+
+
+[tool.hatch.version]
+source = "vcs"
+
+[tool.hatch.build.hooks.vcs]
+version-file = "progressivis/_version.py"
+
+[tool.hatch.build.targets.wheel.hooks.cython]
+dependencies = ["hatch-cython", "numpy"]
+[tool.hatch.build.targets.wheel.hooks.cython.options]
+# include .h or .cpp directories
+includes = []
+# include numpy headers
+include_numpy = true
+include_pyarrow = false
+compile_py = false
+
+
+
+directives = { boundscheck = false, nonecheck = false, language_level = 3, binding = true }
+
+compile_kwargs = { }
 
 [tool.ruff]
 extend-exclude = ["notebooks"]
