adding support for duckdb+fix on pa_csv_loader

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "tdigest>=0.4.1.0",
     "pyroaring",
     "python-dateutil>=2.6.1",  # botocore wants < 2.7.0,>=2.1
+    "duckdb",
     "boto",
     "s3fs",
     "requests",
