for now, back to the previous variant

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Make html
       run: |
         pushd doc
-        make html SPHINXOPTS="-W --keep-going -n"
+        make html
         popd
     - name: Upload doc
       if: always()
