--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -57,5 +57,5 @@ jobs:
       if: failure()
       uses: actions/upload-artifact@v4
       with:
-        name: pip-freeze
+        name: pip-freeze-${{ matrix.python }}
         path: downloads
