Remove test_03_aggre.py because it messes-up the tests

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Run tests
       run: |
         python -m pip install .[test]
-        LOGLEVEL=NOTSET coverage run -m pytest --durations=50 tests -vv
+        coverage run -m pytest --durations=50 tests -vv
 
     - name: Coverage
       run: |
