Apply mypy to doc python files. Continue the documentation. Add the linalg operators to progressivis.__init__ to import them more easily.

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin, mypy/module_plugin.py
-files = progressivis,tests, mypy
+files = progressivis, tests, mypy, doc
 mypy_path = typings
 exclude = ^progressivis/(core/_version\.py|server|build|datashape)
 strict = True
