--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,6 +1,6 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin, mypy/module_plugin.py
 files = progressivis, tests, mypy, doc
-mypy_path = typings
+mypy_path = typings, doc
 exclude = ^progressivis/(core/_version\.py|server|build|datashape)
 strict = True
