Fix mypy. Fix tracer last_steps_durations

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -4,3 +4,4 @@ files = progressivis, tests, mypy, doc
 mypy_path = typings, doc
 exclude = ^progressivis/(core/_version\.py|server|build|datashape)
 strict = True
+warn_unused_ignores = False
