as_array mode for SimpleCSVLoader for loading many csv columns in a single vectorized table column

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-plugins = numpy.typing.mypy_plugin, mypy/module_plugin.py
+plugins = mypy/module_plugin.py
 files = progressivis, tests, mypy, doc
 mypy_path = typings, doc
 exclude = ^progressivis/(core/_version\.py|server|build|datashape)
