fix CSVLoader.get_progresss() behaviour when csv files are gzipped

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,4 +38,5 @@ repos:
           - 'typing_extensions'
           - 'types-setuptools'
           - 'typeguard'
+          - 'pyarrow'
           - 'duckdb'
